2005-10-13 Paul Varner <fuzzyray@gentoo.org>
	* equery: equery depgraph shows USE flags (Bug 74554)
	* equery: equery should properly parse use.local.desc (Bug 74569)
	* equery: equery list escapes regular expressions (Bug 77113)
	* equery: equery uses displays flags correctly (Bug 86633)
	* equery: equery -N option to disable pipe detection (Bug 90046)
	* equery: equery list properly detects version string (Bug 91286)
	* equery: equery belongs now requires a filename (Bug 94618)
	* equery: equery files over a pipe only prints file names (Bug 100148)
	* revdep-rebuild: Fix typo in man page (Bug 109147)

2005-09-25 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Update to read configuration files from
	/etc/revdep-rebuild

2005-09-23 Paul Varner <fuzzyray@gentoo.org>
	* equery: Sort output from equery list (bug 67152)
	* equery: Update man page (Bugs 73893, 74944)
	* equery: equery which returns best-visible ebuild (bug 78687)
	* equery: equery --quiet is actually quiet (bug 78921)
	* equery: Fixed typo in equery -h (bug 82352)
	* gentoolkit: gentoolkit now uses a single portage.config object (bug 90680)
	* equery: equery uses returns unique, sorted list (bug 91623)
	* equery: equery always honors nocolor flag and settings (bug 98634)

2005-09-08 Paul Varner <fuzzyray@gentoo.org>
	* eclean: Inital commit of eclean 0.4.1 from Thomas de Grenier de
	Latour (tgl) <degrenier@easyconnect.fr> (bug 33877)

2005-06-28 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Revert fix for bug 93574 as it can cause packages to be missed. (bug 97171)

2005-06-07 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Delete temporary files if the environment does not match the previous
	                  environment (bug 95274)

2005-06-05 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Imported revdep-rebuild release from bug 62644
	* revdep-rebuild: Major changes to the functionality when using --package-names/-X